--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
             <!-- How to recognize real emeralds -->
             <div class="mb-10">
-                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Cómo reconocer una esmeralda auténtica</h3>
+                <h3 class="text-2xl font-semibold text-emerald-700 mb-4 border-b pb-2">Cómo reconocer una esmeralda auténtica de una sintetica</h3>
                 <div class="grid md:grid-cols-2 gap-8 items-center">
                     <div>
                         <h4 class="text-xl font-medium text-emerald-600 mb-2">Esmeralda auténtica</h4>
