--- a/index.html
+++ b/index.html
@@ -812,6 +812,10 @@
 
                 <p class="mt-4">Puede contactarnos en cualquier momento para ejercer sus derechos sobre sus datos personales.</p>
 
+                <p class="mt-4">Laboratorio Gemológico Local Especializado en Esmeraldas Colombianas, donde realizamos análisis internos para verificar características físicas, ópticas y gemológicas de las piezas ofrecidas. Este laboratorio no recopila datos personales ni manipula información del usuario.</p>
+
+                <p class="mt-4">La información registrada en nuestros informes o certificados gemológicos corresponde exclusivamente al producto, e incluye datos como peso, color, forma, brillo, claridad, origen estimado, tratamientos, medidas y observaciones técnicas.</p>
+
                 <p class="mt-6">Última actualización: 15 de junio, 2025</p>
             </div>
         </div>
