--- a/index.html
+++ b/index.html
@@ -233,24 +233,53 @@
                 <!-- Logo - Updated with your logo -->
                 <img src="https://i.imgur.com/7ySsxSp.png" alt="Joyeria de Esmeraldas" class="h-64 mb-1 logo-img">
 
-                <!-- Search by Certificate Code -->
-                <div class="w-full max-w-md">
-                    <div class="relative">
-                        <input type="text" id="certificateSearch" placeholder="Buscar certificado por código"
-                                class="w-full px-4 py-3 rounded-full border-2 border-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500">
-                        <button onclick="searchCertificate()"
-                                class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-emerald-700 text-white px-4 py-2 rounded-full hover:bg-emerald-800 transition">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                    <p class="text-center text-emerald-800 mt-2 text-sm">Especialistas en esmeraldas colombianas.</p>
-                     </div>
-                    <p class="text-center text-emerald-800 mt-2 text-sm">Certificamos otras gemas naturales bajo los mismos estándares gemológicos.</p>
-                     </div>
-                    <p class="text-center text-emerald-800 mt-2 text-sm">Certificación local con verificación técnica y control gemológico interno.</p>
-                </div>
-            </div>
+                <!-- BLOQUE COMPLETO: HTML + CSS + FUENTE + ANIMACIÓN -->
+<div>
+
+    <!-- Fuente elegante -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <style>
+        .subtext {
+            font-family: "Playfair Display", serif;
+            font-size: 15px;
+            color: #065f46; /* verde esmeralda */
+            line-height: 1.2;
+            text-align: center;
+        }
+
+        .fade-in {
+            opacity: 0;
+            animation: fadeIn 1.2s ease-in-out forwards;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(6px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+
+    <!-- CONTENIDO -->
+    <div class="w-full max-w-md mx-auto">
+        <div class="relative">
+            <input type="text" id="certificateSearch" placeholder="Buscar certificado por código"
+                class="w-full px-4 py-3 rounded-full border-2 border-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-500">
+            
+            <button onclick="searchCertificate()"
+                class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-emerald-700 text-white px-4 py-2 rounded-full hover:bg-emerald-800 transition">
+                <i class="fas fa-search"></i>
+            </button>
         </div>
+
+        <div class="mt-3 space-y-1 fade-in">
+            <p class="subtext">Especialistas en esmeraldas colombianas.</p>
+            <p class="subtext">Certificamos otras gemas naturales bajo los mismos estándares gemológicos.</p>
+            <p class="subtext">Certificación local con verificación técnica y control gemológico interno.</p>
+        </div>
+    </div>
+
+</div>
+
     </header>
 
     <!-- Main Content -->
