--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
         // Certificate Search Function
         function searchCertificate() {
             const code = document.getElementById('certificateSearch').value.trim();
-            if (code === '7788' || code === '200327' || code === '200328' || code === '200285' || code === '200284' || code === '200283' || code === '200282' || code === '200281' || code === '200279' || code === '200280' || code === '200276' || code === '200277' || code === '200278' || code === '200274' || code === '200275' || code === '200272' || code === '200273' || code === '200271' || code === '200270' || code === '200269' || code === '200267' || code === '200268' || code === '200265' || code === '200266' || code === '200264' || code === '200255' || code === '200256' || code === '200253' || code === '200254' || code === '200251' || code === '200252' || code === '200249' || code === '200250' || code === '200247' || code === '200248' || code === '200246' || code === '200245' || code === '200244' || code === '200243' || code === '200242' || code === '200241' || code === '200240' || code === '200239' || code === '200238' || code === '200237' || code === '200236' || code === '200235' || code === '200234' || code === '200233' || code === '200232' || code === '200230' || code === '200231' || code === '200228' || code === '200229' || code === '200226' || code === '200227' || code === '200225' || code === '200223' || code === '200224' || code === '200221' || code === '200222' || code === '200219' || code === '200220' || code === '200215' || code === '200217' || code === '200218' || code === '200216' || code === '200213' || code === '200214' || code === '200212' || code === '200258' || code === '200257' || code === '200262' || code === '200259' || code === '200261' || code === '200260' || code === '200170' || code === '200263' || code === '200167' || code === '200168' || code === '200169' || code === '200164' || code === '200165' || code === '200166' || code === '200162' || code === '200163' || code === '200161' || code === '200157' || code === '200158' || code === '200159' || code === '200160' || code === '200154' || code === '200155' || code === '200156' || code === '200151' || code === '200152' || code === '200153' || code === '200149' || code === '200150' || code === '200146' || code === '200147' || code === '200148' || code === '200145' || code === '200142' || code === '200144' || code === '200143' || code === '200135' || code === '200139' || code === '200141' || code === '200140' || code === '200136' || code === '200137' || code === '200138' || code === '200209' || code === '200210' || code === '200132' || code === '200134' || code === '200133' || code === '200131' || code === '200211' || code === '200205' || code === '200206' || code === '200207' || code === '200208' || code === '200201' || code === '200202' || code === '200203' || code === '200204' || code === '200197' || code === '200198' || code === '200199' || code === '200200' || code === '200192' || code === '200193' || code === '200194' || code === '200195' || code === '200196' || code === '200187' || code === '200191' || code === '200188' || code === '200189' || code === '200190' || code === '200181' || code === '200185' || code === '200186' || code === '200182' || code === '200183' || code === '200184' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
+            if (code === '7788' || code === '200300' || code === '200299' || code === '200298' || code === '200296' || code === '200297' || code === '200295' || code === '200294' || code === '200293' || code === '200292' || code === '200290' || code === '200291' || code === '200289' || code === '200287' || code === '200288' || code === '200286' || code === '200327' || code === '200328' || code === '200285' || code === '200284' || code === '200283' || code === '200282' || code === '200281' || code === '200279' || code === '200280' || code === '200276' || code === '200277' || code === '200278' || code === '200274' || code === '200275' || code === '200272' || code === '200273' || code === '200271' || code === '200270' || code === '200269' || code === '200267' || code === '200268' || code === '200265' || code === '200266' || code === '200264' || code === '200255' || code === '200256' || code === '200253' || code === '200254' || code === '200251' || code === '200252' || code === '200249' || code === '200250' || code === '200247' || code === '200248' || code === '200246' || code === '200245' || code === '200244' || code === '200243' || code === '200242' || code === '200241' || code === '200240' || code === '200239' || code === '200238' || code === '200237' || code === '200236' || code === '200235' || code === '200234' || code === '200233' || code === '200232' || code === '200230' || code === '200231' || code === '200228' || code === '200229' || code === '200226' || code === '200227' || code === '200225' || code === '200223' || code === '200224' || code === '200221' || code === '200222' || code === '200219' || code === '200220' || code === '200215' || code === '200217' || code === '200218' || code === '200216' || code === '200213' || code === '200214' || code === '200212' || code === '200258' || code === '200257' || code === '200262' || code === '200259' || code === '200261' || code === '200260' || code === '200170' || code === '200263' || code === '200167' || code === '200168' || code === '200169' || code === '200164' || code === '200165' || code === '200166' || code === '200162' || code === '200163' || code === '200161' || code === '200157' || code === '200158' || code === '200159' || code === '200160' || code === '200154' || code === '200155' || code === '200156' || code === '200151' || code === '200152' || code === '200153' || code === '200149' || code === '200150' || code === '200146' || code === '200147' || code === '200148' || code === '200145' || code === '200142' || code === '200144' || code === '200143' || code === '200135' || code === '200139' || code === '200141' || code === '200140' || code === '200136' || code === '200137' || code === '200138' || code === '200209' || code === '200210' || code === '200132' || code === '200134' || code === '200133' || code === '200131' || code === '200211' || code === '200205' || code === '200206' || code === '200207' || code === '200208' || code === '200201' || code === '200202' || code === '200203' || code === '200204' || code === '200197' || code === '200198' || code === '200199' || code === '200200' || code === '200192' || code === '200193' || code === '200194' || code === '200195' || code === '200196' || code === '200187' || code === '200191' || code === '200188' || code === '200189' || code === '200190' || code === '200181' || code === '200185' || code === '200186' || code === '200182' || code === '200183' || code === '200184' || code === '200175' || code === '200179' || code === '200180' || code === '200176' || code === '200177' || code === '200178' || code === '200101' || code === '200172' || code === '200173' || code === '200174' || code === '200128' || code === '200130' || code === '200129' || code === '200124' || code === '200126' || code === '200127' || code === '200125' || code === '200121' || code === '200122' || code === '200123' || code === '200115' || code === '200119' || code === '200120' || code === '200116' || code === '200117' || code === '200106' || code === '200109' || code === '200112' || code === '200113' || code === '200114' || code === '200110' || code === '200107' || code === '200108' || code === '200103' || code === '200105' || code === '200102' || code === '200104' || code === '200171' || code === '200111' || code === '200118' || code === '100568' || code === '200567' || code === '2026' || code === '2027') {
                 // Show the modal with appropriate certificate
                 document.getElementById('certificateModal').classList.remove('hidden');
                 document.body.style.overflow = 'hidden';
@@ -974,6 +974,96 @@
                         document.getElementById('certificateCode').textContent = `Código: ${code}`;
                         document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
                         break; 
+                    case '200290':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/U4zzZYp.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200291':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/iwHWyTP.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200292':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/Eonl8dK.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200293':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/SDvLBQZ.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200294':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/fZef8cr.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200295':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/vuwg1mx.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200296':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/e4FXAzb.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200297':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/qWIjSmS.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200298':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/X1E7bCA.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200299':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/vrKW0qk.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200300':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/WKiEk4W.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200289':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/iI1TgBz.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200288':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/s5bkaFC.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200287':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/4VIUK89.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
+                    case '200286':
+                        document.getElementById('certificateFront').src = 'https://i.imgur.com/F5K7zd2.png';
+                        document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
+                        document.getElementById('certificateCode').textContent = `Código: ${code}`;
+                        document.getElementById('certificateCodeBack').textContent = `Código: ${code}`;
+                        break;
                     case '200327':
                         document.getElementById('certificateFront').src = 'https://i.imgur.com/aDYvS3a.png';
                         document.getElementById('certificateBack').src = 'https://i.imgur.com/H29SSnq.png';
